--- a/src/style.css
+++ b/src/style.css
@@ -25,19 +25,72 @@
 .photo-one-card {
     display: flex;
     flex-direction: column;
-    width: 452px;
+    width: 500px;
     height: 317px;
     border: 1px solid #8e8f99;
 }
 
 .info {
+    height: 65px;
     display: flex;
     align-items: space-between;
     gap: 20px;
+    padding-top: 10px;
     justify-content: center;
     border-bottom: 2px solid #8e8f99;
 }
 
 .info-item {
     display: block;
+}
+
+/* Модальне вікно */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modal-content {
+    margin: auto;
+    display: block;
+    max-width: 800px;
+    max-height: 600px;
+    padding: 20px;
+    background-color: #fff;
+}
+
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+}
+
+/* Кнопки "prev" і "next" */
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+}
+
+.prev {
+    left: 10px;
+}
+
+.next {
+    right: 10px;
 }
