--- a/src/style.css
+++ b/src/style.css
@@ -97,10 +97,16 @@
     right: 10px;
 }
 
-.load-more-blat {
+.load-more {
     width: 500px;
     height: 80px;
     margin: 35px;
     margin-left: auto;
     margin-right: auto;
+    background-color: turquoise;
+    border-bottom: 10px solid #000;
+    border-left: 13px solid #000;
+    border-top: 3px solid #000;
+    border-right: 3px solid #000;
+
 }
